Open file & More Css Overflow Fixes.. & Options tab (Blank for now)

--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@
 	border-radius: 0.2rem !important;
 }
 
+#editorArea, #viewerArea {
+	z-index: -1;
+	height: calc(100vh - 128px) !important;
+}
+
+#list-div {
+	overflow-y: auto;
+	max-height: 75vh !important;
+}
+
 #text-editor {
 	width: 100%;
 	height: 100%;
